// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputComponent renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <InputComponent />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#4b657d",
              "fontFamily": "Montserrat",
              "fontSize": 24,
              "fontWeight": "bold",
              "height": 30,
              "opacity": 0.4,
            }
          }
        >
           
           
        </Text>,
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            editable={undefined}
            multiline={undefined}
            onChangeText={undefined}
            placeholder={undefined}
            placeholderTextColor="grey"
            secureTextEntry={undefined}
            style={
              Array [
                Object {
                  "color": "#1c1b1b",
                  "fontFamily": "Montserrat",
                  "fontSize": 32,
                  "height": 48,
                  "lineHeight": 48,
                  "marginBottom": 16,
                  "padding": 0,
                  "width": 562,
                },
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value={undefined}
          />
        </View>,
        <View
          style={
            Object {
              "backgroundColor": "#a6b5ca",
              "height": 1,
              "opacity": 0.2,
            }
          }
        />,
      ],
      "style": Array [
        Object {
          "height": 148,
          "paddingTop": 24,
        },
        undefined,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": Array [
            " ",
            undefined,
            " ",
          ],
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#4b657d",
            "fontFamily": "Montserrat",
            "fontSize": 24,
            "fontWeight": "bold",
            "height": 30,
            "opacity": 0.4,
          },
        },
        "ref": null,
        "rendered": Array [
          " ",
          undefined,
          " ",
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <TextInput
              allowFontScaling={true}
              autoCorrect={false}
              editable={undefined}
              multiline={undefined}
              onChangeText={undefined}
              placeholder={undefined}
              placeholderTextColor="grey"
              secureTextEntry={undefined}
              style={
                Array [
                  Object {
                    "color": "#1c1b1b",
                    "fontFamily": "Montserrat",
                    "fontSize": 32,
                    "height": 48,
                    "lineHeight": 48,
                    "marginBottom": 16,
                    "padding": 0,
                    "width": 562,
                  },
                  undefined,
                ]
              }
              underlineColorAndroid="transparent"
              value={undefined}
            />,
            undefined,
          ],
          "style": Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "allowFontScaling": true,
              "autoCorrect": false,
              "editable": undefined,
              "multiline": undefined,
              "onChangeText": undefined,
              "placeholder": undefined,
              "placeholderTextColor": "grey",
              "secureTextEntry": undefined,
              "style": Array [
                Object {
                  "color": "#1c1b1b",
                  "fontFamily": "Montserrat",
                  "fontSize": 32,
                  "height": 48,
                  "lineHeight": 48,
                  "marginBottom": 16,
                  "padding": 0,
                  "width": 562,
                },
                undefined,
              ],
              "underlineColorAndroid": "transparent",
              "value": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          undefined,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "backgroundColor": "#a6b5ca",
            "height": 1,
            "opacity": 0.2,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#4b657d",
                "fontFamily": "Montserrat",
                "fontSize": 24,
                "fontWeight": "bold",
                "height": 30,
                "opacity": 0.4,
              }
            }
          >
             
             
          </Text>,
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <TextInput
              allowFontScaling={true}
              autoCorrect={false}
              editable={undefined}
              multiline={undefined}
              onChangeText={undefined}
              placeholder={undefined}
              placeholderTextColor="grey"
              secureTextEntry={undefined}
              style={
                Array [
                  Object {
                    "color": "#1c1b1b",
                    "fontFamily": "Montserrat",
                    "fontSize": 32,
                    "height": 48,
                    "lineHeight": 48,
                    "marginBottom": 16,
                    "padding": 0,
                    "width": 562,
                  },
                  undefined,
                ]
              }
              underlineColorAndroid="transparent"
              value={undefined}
            />
          </View>,
          <View
            style={
              Object {
                "backgroundColor": "#a6b5ca",
                "height": 1,
                "opacity": 0.2,
              }
            }
          />,
        ],
        "style": Array [
          Object {
            "height": 148,
            "paddingTop": 24,
          },
          undefined,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": Array [
              " ",
              undefined,
              " ",
            ],
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#4b657d",
              "fontFamily": "Montserrat",
              "fontSize": 24,
              "fontWeight": "bold",
              "height": 30,
              "opacity": 0.4,
            },
          },
          "ref": null,
          "rendered": Array [
            " ",
            undefined,
            " ",
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <TextInput
                allowFontScaling={true}
                autoCorrect={false}
                editable={undefined}
                multiline={undefined}
                onChangeText={undefined}
                placeholder={undefined}
                placeholderTextColor="grey"
                secureTextEntry={undefined}
                style={
                  Array [
                    Object {
                      "color": "#1c1b1b",
                      "fontFamily": "Montserrat",
                      "fontSize": 32,
                      "height": 48,
                      "lineHeight": 48,
                      "marginBottom": 16,
                      "padding": 0,
                      "width": 562,
                    },
                    undefined,
                  ]
                }
                underlineColorAndroid="transparent"
                value={undefined}
              />,
              undefined,
            ],
            "style": Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "allowFontScaling": true,
                "autoCorrect": false,
                "editable": undefined,
                "multiline": undefined,
                "onChangeText": undefined,
                "placeholder": undefined,
                "placeholderTextColor": "grey",
                "secureTextEntry": undefined,
                "style": Array [
                  Object {
                    "color": "#1c1b1b",
                    "fontFamily": "Montserrat",
                    "fontSize": 32,
                    "height": 48,
                    "lineHeight": 48,
                    "marginBottom": 16,
                    "padding": 0,
                    "width": 562,
                  },
                  undefined,
                ],
                "underlineColorAndroid": "transparent",
                "value": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            undefined,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "#a6b5ca",
              "height": 1,
              "opacity": 0.2,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`InputComponent renders correctly with multiline 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <InputComponent
    multiline={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#4b657d",
              "fontFamily": "Montserrat",
              "fontSize": 24,
              "fontWeight": "bold",
              "height": 30,
              "opacity": 0.4,
            }
          }
        >
           
           
        </Text>,
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            editable={undefined}
            multiline={true}
            onChangeText={undefined}
            placeholder={undefined}
            placeholderTextColor="grey"
            secureTextEntry={undefined}
            style={
              Array [
                Object {
                  "color": "#1c1b1b",
                  "fontFamily": "Montserrat",
                  "fontSize": 32,
                  "height": 48,
                  "lineHeight": 48,
                  "marginBottom": 16,
                  "padding": 0,
                  "width": 562,
                },
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value={undefined}
          />
        </View>,
        <View
          style={
            Object {
              "backgroundColor": "#a6b5ca",
              "height": 1,
              "opacity": 0.2,
            }
          }
        />,
      ],
      "style": Array [
        Object {
          "height": 148,
          "paddingTop": 24,
        },
        undefined,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": Array [
            " ",
            undefined,
            " ",
          ],
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#4b657d",
            "fontFamily": "Montserrat",
            "fontSize": 24,
            "fontWeight": "bold",
            "height": 30,
            "opacity": 0.4,
          },
        },
        "ref": null,
        "rendered": Array [
          " ",
          undefined,
          " ",
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <TextInput
              allowFontScaling={true}
              autoCorrect={false}
              editable={undefined}
              multiline={true}
              onChangeText={undefined}
              placeholder={undefined}
              placeholderTextColor="grey"
              secureTextEntry={undefined}
              style={
                Array [
                  Object {
                    "color": "#1c1b1b",
                    "fontFamily": "Montserrat",
                    "fontSize": 32,
                    "height": 48,
                    "lineHeight": 48,
                    "marginBottom": 16,
                    "padding": 0,
                    "width": 562,
                  },
                  undefined,
                ]
              }
              underlineColorAndroid="transparent"
              value={undefined}
            />,
            undefined,
          ],
          "style": Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "allowFontScaling": true,
              "autoCorrect": false,
              "editable": undefined,
              "multiline": true,
              "onChangeText": undefined,
              "placeholder": undefined,
              "placeholderTextColor": "grey",
              "secureTextEntry": undefined,
              "style": Array [
                Object {
                  "color": "#1c1b1b",
                  "fontFamily": "Montserrat",
                  "fontSize": 32,
                  "height": 48,
                  "lineHeight": 48,
                  "marginBottom": 16,
                  "padding": 0,
                  "width": 562,
                },
                undefined,
              ],
              "underlineColorAndroid": "transparent",
              "value": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          undefined,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "backgroundColor": "#a6b5ca",
            "height": 1,
            "opacity": 0.2,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#4b657d",
                "fontFamily": "Montserrat",
                "fontSize": 24,
                "fontWeight": "bold",
                "height": 30,
                "opacity": 0.4,
              }
            }
          >
             
             
          </Text>,
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <TextInput
              allowFontScaling={true}
              autoCorrect={false}
              editable={undefined}
              multiline={true}
              onChangeText={undefined}
              placeholder={undefined}
              placeholderTextColor="grey"
              secureTextEntry={undefined}
              style={
                Array [
                  Object {
                    "color": "#1c1b1b",
                    "fontFamily": "Montserrat",
                    "fontSize": 32,
                    "height": 48,
                    "lineHeight": 48,
                    "marginBottom": 16,
                    "padding": 0,
                    "width": 562,
                  },
                  undefined,
                ]
              }
              underlineColorAndroid="transparent"
              value={undefined}
            />
          </View>,
          <View
            style={
              Object {
                "backgroundColor": "#a6b5ca",
                "height": 1,
                "opacity": 0.2,
              }
            }
          />,
        ],
        "style": Array [
          Object {
            "height": 148,
            "paddingTop": 24,
          },
          undefined,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": Array [
              " ",
              undefined,
              " ",
            ],
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#4b657d",
              "fontFamily": "Montserrat",
              "fontSize": 24,
              "fontWeight": "bold",
              "height": 30,
              "opacity": 0.4,
            },
          },
          "ref": null,
          "rendered": Array [
            " ",
            undefined,
            " ",
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <TextInput
                allowFontScaling={true}
                autoCorrect={false}
                editable={undefined}
                multiline={true}
                onChangeText={undefined}
                placeholder={undefined}
                placeholderTextColor="grey"
                secureTextEntry={undefined}
                style={
                  Array [
                    Object {
                      "color": "#1c1b1b",
                      "fontFamily": "Montserrat",
                      "fontSize": 32,
                      "height": 48,
                      "lineHeight": 48,
                      "marginBottom": 16,
                      "padding": 0,
                      "width": 562,
                    },
                    undefined,
                  ]
                }
                underlineColorAndroid="transparent"
                value={undefined}
              />,
              undefined,
            ],
            "style": Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "allowFontScaling": true,
                "autoCorrect": false,
                "editable": undefined,
                "multiline": true,
                "onChangeText": undefined,
                "placeholder": undefined,
                "placeholderTextColor": "grey",
                "secureTextEntry": undefined,
                "style": Array [
                  Object {
                    "color": "#1c1b1b",
                    "fontFamily": "Montserrat",
                    "fontSize": 32,
                    "height": 48,
                    "lineHeight": 48,
                    "marginBottom": 16,
                    "padding": 0,
                    "width": 562,
                  },
                  undefined,
                ],
                "underlineColorAndroid": "transparent",
                "value": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            undefined,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "#a6b5ca",
              "height": 1,
              "opacity": 0.2,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
